# 2d-mes-solver

./: .gitignore  CMakeLists.txt  README.md
data/my_results/: Test1_4_4.txt_2pc_results.txt  Test1_4_4.txt_3pc_results.txt  Test1_4_4.txt_4pc_results.txt  Test2_4_4_MixGrid.txt_2pc_results.txt  Test2_4_4_MixGrid.txt_3pc_results.txt  Test2_4_4_MixGrid.txt_4pc_results.txt  Test3_31_31_kwadrat.txt_4pc_results.txt
inc/: calculate.h  elemUniv.h  gauss.h  globalData.h  input.h
lib/NumLib/: CMakeLists.txt  README.md
lib/NumLib/examples/: example_runner.cpp
lib/NumLib/include/: approximation.hpp  differential_equations.hpp  integration.hpp  interpolation.hpp  linear_algebra.hpp  nonlinear_equations.hpp
lib/NumLib/src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_algebra.cpp  nonlinear_equations.cpp
lib/NumLib/tests/: test_runner.cpp
src/: calculate.cpp  elemUniv.cpp  gauss.cpp  input.cpp  main.cpp
